added CodeMirror JavaScriptParser GWT test (IDE-613)